manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-springboot-keda-autoscaling
  labels:
    app: workshop-springboot-keda-autoscaling
    backstage.io/kubernetes-id: workshop-springboot-keda-autoscaling
spec:
  replicas: 0
  selector:
    matchLabels:
      app: workshop-springboot-keda-autoscaling
  template:
    metadata:
      labels:
        app: workshop-springboot-keda-autoscaling
        backstage.io/kubernetes-id: workshop-springboot-keda-autoscaling
    spec:
      containers:
        - name: app
          image: image-registry.openshift-image-registry.svc:5000/openshift/workshop-springboot-keda-autoscaling:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 300m
