manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workshop-springboot-keda-autoscaling
  labels:
    app: workshop-springboot-keda-autoscaling
    backstage.io/kubernetes-id: workshop-springboot-keda-autoscaling
spec:
  selector:
    app: workshop-springboot-keda-autoscaling
  ports:
    - port: 8080
      targetPort: 8080
